Fix : Alignment 5

--- a/CSS/Account.css
+++ b/CSS/Account.css
@@ -55,3 +55,12 @@ a.sidebar:hover {
 div.add_image {
     cursor: pointer;
 }
+@media screen and (min-width:1200px){
+    div.inner_row{
+      height: 94%;
+    }
+}
+*::-webkit-scrollbar
+{
+    display: none;
+}
